# TodoListApp

./: .gitignore  CMakeLists.txt  README.md  compile.rc  makefile  todo_gui.desktop
src/: help.hh  main.cc
src/database/: database.hh
src/date/: date.hh
src/heap-pair/: heap-pair.hh
src/help/: help.hh
src/io/: io.hh
src/task/: task.hh
src/ui/cli/: cli.cc  entry.hh
src/ui/gui/: database_handler.hh  design.glade  gui.cc  gui.hh  variables.hh
